--- a/templates/rank/rankList.html
+++ b/templates/rank/rankList.html
@@ -37,109 +37,43 @@
                 //document.getElementById('kind'+resultobj.result).style.display='none';
             }
         </script>
+        <script  type="text/javascript">
+            var plugindata=new Object();
+            var pluginimgdata=new Object();
+        </script>
+        {% for rank in ranklist %}
+        <script  type="text/javascript" src="{{pluginurl}}/getPluginNameByGamecode?gamecode={{rank.key().name()}}"/>
+        {% endfor %}
 {%endblock%}
 {% block navigator %}
-<a  href="/WebsiteList">分类管理</a>
- >> <a href="#">分类管理</a> >> <a href="javascript:history.back(-1);">后退</a>
+<a  href="/RankList">等级管理</a>
+ >>  <a href="javascript:history.back(-1);">后退</a>
 {% endblock %}
 {% block content %}
 
 <table width="90%" cellpadding="1" cellspacing="1" border="0" bgcolor="#D5E3E6">
     <tr bgcolor="#ffffff"  height="25">
     <td width="40px"  align="center">顺序号</td>
-    <td width="80px" align="center">名称</td>
+    <td width="80px" align="center">游戏gamecode</td>
+    <td width="80px" align="center">游戏名称</td>
     <td width="80px" align="center">图标</td>
     <td width="100px" align="center">游戏包名</td>
     <td width="50px;" align="center">操作</td>
     </tr>
-    {% for kind,pluginlist,allpluginlist in kindlist %}
-        <tr class="kind{{kind.key().id()}}"  bgcolor="#ffffff" >
-            <td colspan="5" align="left" style="padding-left: 10px;height: 30px;">
-                <div style="float: left;">
-                分类名：{{kind.name}}&nbsp;&nbsp;&nbsp;&nbsp;数量：{{pluginlist|length}}
-                </div>
-                <div style="float: right;">
-                    <a href="/KindMove?path=up&kindid={{kind.key().id()}}"><img src="/image/up.gif"  border="0"/></a>&nbsp;|&nbsp;
-                    <a href="/KindMove?path=down&kindid={{kind.key().id()}}"><img src="/image/down.gif"  border="0"/></a>&nbsp;|&nbsp;
-                    <a href="javascript:delKindPlugin('{{kind.key().id()}}')"><img src="/image/del.gif"  border="0"/></a>&nbsp;
-                </div>
-            </td>
-        </tr>
-        {% for plugin in pluginlist%}
-        <tr class="kind{{kind.key().id()}}" id="kind{{kind.key().id()}}tr{{plugin.key().id()}}" style="cursor:hand"  height="25"  onmouseover="cells_color(this,1);" onMouseOut="cells_color(this,2);" bgcolor="#ffffff">
+    {% for rank in ranklist %}
+        <tr  style="cursor:hand"  height="25"  onmouseover="cells_color(this,1);" onMouseOut="cells_color(this,2);" bgcolor="#ffffff">
             <td align="center">{{loop.index}}</td>
-            <td align="center">{{plugin.name}}</td>
-            <td align="center"><div style="margin: 5px;float: left;"><img  src="/download?image_id={{plugin.imageid}}" border="0"></div></td>
-            <td align="center">{{plugin.appcode}}</td>
-        <td align="center"><a href="/KindPluginMove?path=up&kindid={{kind.key().id()}}&id={{plugin.key().id()}}"><img src="/image/up.gif"  border="0"/></a>&nbsp;|&nbsp;
-            <a href="/KindPluginMove?path=down&kindid={{kind.key().id()}}&id={{plugin.key().id()}}"><img src="/image/down.gif"  border="0"/></a>&nbsp;|&nbsp;
-            <a href="javascript:delPlugin('{{plugin.key().id()}}','{{kind.key().id()}}')"><img src="/image/del.gif"  border="0"/></a>&nbsp;</td>
+            <td align="center">{{rank.key().name()}}</td>
+            <td align="center" id="td{{rank.key().name()}}"></td>
+            <td align="center"><div style="margin: 5px;float: left;"><img  src="{{pluginurl}}/download?image_id=" id="img{{rank.key().name()}}" border="0"></div></td>
+            <td align="center"></td>
+            <td align="center"><a href="/RankCreate?gamecode={{rank.key().name()}}"><img src="/image/up.gif"  border="0"/></a>&nbsp;|&nbsp;
+
+            <a href="javascript:delPlugin('{{rank.key().name()}}')"><img src="/image/del.gif"  border="0"/></a>&nbsp;</td>
         </tr>
-        {%endfor%}
-        <tr class="kind{{kind.key().id()}}"  bgcolor="#ffffff"  >
-            <td colspan="5" align="left" style="padding-left: 30px;height: 30px; color: red;">
-               添加游戏
-            </td>
-        </tr>
-        <tr class="kind{{kind.key().id()}}"  bgcolor="#ffffff"  >
-            <td colspan="5" align="left" style="padding-left: 30px;height: 30px;">
-                <form action="/KindAddPlugin" method="post">
-                    <table border="0" style="width: 100%;height:100%">
-                        <tr>
-                            <td style="text-align: right;width: 60px;" >选择位置：</td>
-                            <td style="text-align: left;width: 60px;"><select name="index">
-                                 {% for plugin in pluginlist%}
-                                <option value="{{loop.index0}}">{{loop.index}}</option>
-                                {% endfor %}
-                                <option value="{{pluginlist|length}}" selected>最后</option>
-                            </select></td>
-                            <td  style="text-align: right;width: 60px;">选择游戏：</td>
-                            <td style="text-align: left;width: 200px;">
-                                <select name="appcode">
-                                    {% for plugin in allpluginlist%}
-                                        <option value="{{plugin.key().id()}}">{{plugin.name}}:{{plugin.appcode}}</option>
-                                    {%endfor%}
-                                </select>
-                            </td>
-                            <td style="text-align: left;">
-                            <input type="submit" value="添加">
-                                <input type="hidden" name="kindid" value="{{kind.key().id()}}">
-                        </td>
-                        </tr>
-                    </table>
-                </form>
-            </td>
-        </tr>
+
     {%endfor%}
-    <tr   bgcolor="#ffffff" >
-        <td colspan="5" align="left" style=" padding-left: 10px;height: 25px; color: red;">
-           添加分类
-        </td>
-    </tr>
-    <tr   bgcolor="#ffffff" >
-        <td colspan="5" align="left" style="padding-left: 10px;height: 25px;">
-            <form action="/KindUpdate" method="post">
-                <table border="0" style="width: 100%;height:100%">
-                    <tr>
-                        <td style="text-align: right;width: 60px;" >选择位置：</td>
-                        <td style="text-align: left;width: 60px;"><select name="index">
-                             {% for kind,pluginlist,allpluginlist in kindlist%}
-                            <option value="{{loop.index0}}">{{loop.index}}</option>
-                            {% endfor %}
-                            <option value="{{kindlist|length}}" selected>最后</option>
-                        </select></td>
-                        <td  style="text-align: right;width: 60px;">分类名称：</td>
-                        <td style="text-align: left;width: 200px;">
-                            <input type="text" name="name" style="width: 200px;">
-                        </td>
-                        <td style="text-align: left;">
-                            <input type="submit" value="添加">
-                        </td>
-                    </tr>
-                </table>
-            </form>
-        </td>
-    </tr>
+
 </table>
 
 {% endblock %}
