--- a/template/rank/rankList.html
+++ b/template/rank/rankList.html
@@ -38,22 +38,25 @@
         <script  type="text/javascript">
             var pluginlist = [];
             {% for rank in ranklist %}
-            pluginlist.append('{{rank.key().name()}}');
+            pluginlist.push('{{rank.key().name()}}');
             {% endfor %}
             var plugindata=new Object();
             var pluginimgdata=new Object();
         </script>
         {% for rank in ranklist %}
-        <script  type="text/javascript" src="{{pluginurl}}/getPluginNameByGamecode?appcode={{rank.key().name()}}"/>
+        <script  type="text/javascript" src="{{pluginurl}}/getPluginNameByGamecode?appcode={{rank.key().name()}}">
+        </script>
         {% endfor %}
-        <script type="text/javascript">
-            $j(function(){
+        <script   type="text/javascript" >
+            window.onload=function()
+            {
+                var appcode=null;
                 for(var i=0;i<pluginlist.length;i++){
-                    $j('#td'+pluginlist[i]).html(plugindata[pluginlist[i]]);
-                    $j('#img'+pluginlist[i]).att('src','{{pluginurl}}/download?image_id='+pluginimgdata[pluginlist[i]]);
+                    appcode = pluginlist[i].replace(/\./g,'_');
+                    $j('#td'+appcode).html(plugindata[appcode]);
+                    $j('#img'+appcode).attr('src','{{pluginurl}}/download?image_id='+pluginimgdata[appcode]);
                 }
-            });
-
+            }
         </script>
 {%endblock%}
 {% block navigator %}
@@ -63,6 +66,14 @@
 {% block content %}
 
 <table width="90%" cellpadding="1" cellspacing="1" border="0" bgcolor="#D5E3E6">
+    <tr  bgcolor="#ffffff">
+        <td colspan="6" style="height: 50px;text-align: center;">
+            <form action="/RankList" method="get">
+                <label>appcode:</label><input name="appcode" value="{{appcode}}" width="20"><input type="submit" value="查询">
+            </form>
+
+        </td>
+    </tr>
     <tr bgcolor="#ffffff"  height="25">
     <td width="40px"  align="center">顺序号</td>
     <td width="80px" align="center">游戏appcode</td>
@@ -75,16 +86,16 @@
         <tr id="{{rank.key().name()}}" style="cursor:hand"  height="25"  onmouseover="cells_color(this,1);" onMouseOut="cells_color(this,2);" bgcolor="#ffffff">
             <td align="center">{{loop.index}}</td>
             <td align="center">{{rank.key().name()}}</td>
-            <td align="center" id="td{{rank.key().name()}}"></td>
-            <td align="center"><div style="margin: 5px;float: left;"><img  id="img{{rank.key().name()}}" border="0"></div></td>
+            <td align="center" id="td{{rank.key().name().replace('.','_')}}"></td>
+            <td align="center"><div style="margin: 5px;float: left;"><img  id="img{{rank.key().name().replace('.','_')}}" border="0"></div></td>
             <td align="center"></td>
-            <td align="center"><a href="/RankCreate?appcode={{rank.key().name()}}"><img src="/image/up.gif"  border="0"/></a>&nbsp;|&nbsp;
+            <td align="center"><a href="/RankCreate?appcode={{rank.key().name()}}"><img src="/image/update.gif"  border="0"/></a>&nbsp;|&nbsp;
 
             <a href="javascript:delPlugin('{{rank.key().name()}}')"><img src="/image/del.gif"  border="0"/></a>&nbsp;</td>
         </tr>
 
     {%endfor%}
-    <tr>
+    <tr  bgcolor="#ffffff">
         <td colspan="6">
             {%if pre!=0%}<a href="/RankList?start={{pre}}">上一页</a> {%endif%}
             {%if count==20%}<a href="/RankList?start={{nex}}">下一页</a> {%endif%}
