--- a/template/room/roomUpdate.html
+++ b/template/room/roomUpdate.html
@@ -35,8 +35,8 @@
          {%endif%}
 {% endblock%}
 {% block navigator %}
-<a  href="/RoomList">等级管理</a>
- >> <a href="#">修改游戏等级</a> >> <a href="javascript:history.back(-1);">后退</a>
+<a  href="/RoomList">房间管理</a>
+ >> <a href="#">修改游戏房间信息</a> >> <a href="javascript:history.back(-1);">后退</a>
 {% endblock %}
 {% block content %}
 <form action="/RoomCreate" enctype="multipart/form-data" method="post" id="form1" onsubmit="return valSubmit('form1');">
